--- a/src/app/modules/login/components/login-screen/login-screen.component.html
+++ b/src/app/modules/login/components/login-screen/login-screen.component.html
@@ -1,7 +1,28 @@
 <div class="container">
     
     <div class="login-card">
-        <div class="left-side">asdsaddas</div>
-        <div class="right-side"></div>
+        <div class="left-side">
+            
+            <img src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1430&q=80" alt="">
+
+        </div>
+        <div class="right-side">
+            <img src="assets/logo-pedisoft-circle.png" alt="dsfsdfdsf">
+            <h2>Pedisoft Login</h2>
+
+            <div class="form-item">
+                <label htmlFor="username">Username</label>
+                <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="a" />
+                <small id="username-help">Enter your username to reset your password.</small>
+            </div>
+
+            <div class="form-item">
+                <label htmlFor="password">Username</label>
+                <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="a" />
+                <small id="username-help">Enter your username to reset your password.</small>
+            </div>
+            
+
+        </div>
     </div>
 </div>
