--- a/src/app/modules/login/components/login-screen/login-screen.component.scss
+++ b/src/app/modules/login/components/login-screen/login-screen.component.scss
@@ -7,7 +7,7 @@
 }
 
 .left-side{
-    @apply flex-1 bg-amber-600 hidden md:block;
+    @apply flex-1 hidden md:block;
 
     img{
         @apply w-full h-full object-cover
