--- a/src/app/modules/home/components/header/header.component.scss
+++ b/src/app/modules/home/components/header/header.component.scss
@@ -1,6 +1,5 @@
 nav{
-    @apply bg-white dark:bg-gray-900 sticky w-full z-20 top-0 left-0 
-    border-b border-gray-200 dark:border-gray-600 p-1;
+    @apply bg-white dark:bg-gray-900 w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600;
 }
 
 .header {
@@ -9,8 +8,7 @@ nav{
 
 .nav-item{
     @apply block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent
-        md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700
-        dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700;
+        md:hover:text-blue-700 md:p-0
 }
 
 .nav-list{
