--- a/src/app/modules/home/components/main/main.component.scss
+++ b/src/app/modules/home/components/main/main.component.scss
@@ -3,5 +3,15 @@
 }
 
 .main-wrapper{
-    @apply flex-grow
+    @apply flex-grow px-32 py-8 inline-flex flex-col items-center gap-6
+}
+
+form{
+    @apply flex flex-col gap-4 items-center;
+    label{
+        @apply text-left
+    }
+    p-dropdown{
+        @apply w-full;
+    }
 }
