Add graphql dependency

--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -5,10 +5,10 @@
         <form name="algorithmPick" #algorithmPick="ngForm" (ngSubmit)="getAlgorithmInfo()">
             <label class="block text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona el algoritmo</label>
             <p-dropdown [placeholder]="'Selecciona'" [required]="true" name="algorithm" [options]="test" [(ngModel)]="selectedAlgorithm" [style]="{ width: '100%' }"></p-dropdown>
-            <p-button label="Obtener información" [disabled]="!algorithmPick.form.valid"></p-button>
+            <p-button label="Obtener información" [disabled]="!algorithmPick.form.valid" (onClick)="this.getAlgorithmInfo()"></p-button>
         </form>
 
-        <app-vtk-visualizer></app-vtk-visualizer>
+        <app-vtk-visualizer *ngIf="file !== null"></app-vtk-visualizer>
     </div>
     <app-footer class="mt-auto"></app-footer>
 </div>
