add component and subchild routes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "primeicons/primeicons.css";
 *{
     padding: 0;
     margin: 0;
