--- a/src/app/modules/home/components/header/header.component.scss
+++ b/src/app/modules/home/components/header/header.component.scss
@@ -1,5 +1,5 @@
 nav{
-    @apply bg-white dark:bg-gray-900 w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600;
+    @apply bg-white w-full z-20 top-0 left-0 border-b border-gray-200;
 }
 
 .header {
@@ -12,10 +12,10 @@ nav{
 }
 
 .nav-list{
-    @apply flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:flex-row
-        md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700;
+    @apply flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-100 md:flex-row
+        md:space-x-8 md:mt-0 md:border-0 md:bg-white;
 }
 
 .nav-item-selected{
-    @apply block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500;
+    @apply block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 ;
 }
