--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -1,14 +1,1 @@
-<p-toast [breakpoints]="{'840px': {width: '100%', right: '0', left: '0'}}"></p-toast>
-<div class="container">
-    <app-header class="sticky top-0"></app-header>
-    <div class="main-wrapper">
-        
-        <form name="algorithmPick" #algorithmPick="ngForm" (ngSubmit)="getAlgorithmInfo()">
-            <label class="block text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona el algoritmo</label>
-            <p-dropdown [placeholder]="'Selecciona'" [required]="true" name="algorithm" [options]="algo" [(ngModel)]="selectedAlgorithm" [style]="{ width: '100%' }"></p-dropdown>
-<p-button label="Obtener información" [disabled]="!algorithmPick.form.valid" (onClick)="this.getAlgorithmInfo()"></p-button>
-        </form>
-
-    </div>
-    <app-footer class="mt-auto"></app-footer>
-</div>
+<p>main works!</p>
