--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -1,1 +1,29 @@
-<p>main works!</p>
+<p-fieldset>
+    <ng-template pTemplate="header">
+        <div class="flex items-center font-extrabold">
+            <span class="pi pi-box mr-2"></span>
+            <span class="font-bold text-lg">Información</span>
+        </div>
+    </ng-template>
+    <p class="m-0 text-gray-700 leading-loose">
+        Pedisoft es una plataforma planeada para la conexión rápida, sencilla y concentrada de algoritmos de
+        inteligencia artificial. Si bien la naturaleza, el diseño y la arquitectura de esta aplicación está
+        pensada para cualquier tipo de algoritmo en cualquier contexto, el motivo y el sentido de la misma
+        deriva de una necesidad de los médicos pediátricos: la toma de decisiones
+        de radigrafías pediátricas. <br>
+        Nos motiva el hecho de que de ser posible, el uso de esta aplicación puede llegar a salvar vidas de
+        una manera o ayudar a mejorar la calidad de vida de los pacientes pediátricos asistiendo a los
+        profesionales de la salud. Desarrollado por: </p>
+    <br>
+    <ul class="emoji-list leading-[2.4]">
+        <li>Santiago Zúñiga Martínez: <a class="font-bold text-blue-600 underline">s.zunigam@javeriana.edu.co</a></li>
+        <li>Juan Esteban Urquijo Huérfano: <a class="font-bold text-blue-600 underline">jurquijo@javeriana.edu.co</a></li>
+        <li>Txsus: <a class="font-bold text-blue-600 underline">txus@javeriana.edu.co</a></li>
+        <li>Juan Andrés Dorado: <a class="font-bold text-blue-600 underline">dorado@javeriana.edu.co</a></li>
+    </ul>
+    <br>
+    <p>
+        Para más información sobre el uso de la misma, consulte la pestaña <a routerLink="help"
+            class="font-bold hover:text-blue-600 hover:underline">Ayuda</a>
+    </p>
+</p-fieldset>
