--- a/src/app/modules/home/components/algorithm/algorithm.component.scss
+++ b/src/app/modules/home/components/algorithm/algorithm.component.scss
@@ -1,21 +1,17 @@
 .container{
-    @apply flex flex-col h-screen w-screen min-h-full min-w-full;
-}
-
-.main-wrapper{
-    @apply flex-grow px-32 py-8 inline-flex flex-col items-center gap-6
+    @apply flex flex-col items-center gap-2 w-screen p-3 sm:p-0;
 }
 
 form{
-    @apply flex flex-col gap-4 items-center flex-1;
+    @apply flex flex-col gap-4 items-center w-full md:w-[65%] ;
     label{
         @apply text-center
     }
     p-dropdown{
         @apply w-full;
-    }
+    }     
 }
 
 .cell{
-    @apply flex flex-row gap-1
+    @apply flex flex-row gap-1 w-full md:w-[65%]
 }
