--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -3,5 +3,5 @@
 }
 
 .main-wrapper{
-    @apply flex-grow px-32 py-8 inline-flex flex-col items-center gap-6
+    @apply flex-grow px-4 py-8 inline-flex flex-col items-center gap-6 md:px-32
 }
