--- a/src/app/modules/form-builder/components/algorithm-form/algorithm-form.component.html
+++ b/src/app/modules/form-builder/components/algorithm-form/algorithm-form.component.html
@@ -1,5 +1,6 @@
 <form name="microPick" (ngSubmit)="sendRequest()">
-
-
-    
+    <div *ngFor="let tag of tags" class="form-row">
+        <app-algorithm-form-tag [tag]="tag" [form]="form"></app-algorithm-form-tag>
+    </div>
+    <p-button type="submit" label="Enviar" severity="success" [disabled]="!form.valid"></p-button>
 </form>
