--- a/src/app/modules/visualizer/components/vtk-visualizer/vtk-visualizer.component.html
+++ b/src/app/modules/visualizer/components/vtk-visualizer/vtk-visualizer.component.html
@@ -1,4 +1,4 @@
-<p-menubar class="menuBar" [model]="itemsMenu">
+<p-menubar class="menuBar" [model]="this.itemsMenu">
 </p-menubar>
 <div class="visualizer">
   <div #visualizer></div>
