--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,6 +1,6 @@
 <p-toast [breakpoints]="{'840px': {width: '100%', right: '0', left: '0'}}"></p-toast>
 <div class="container">
-    <app-header class="sticky top-0"></app-header>
+    <app-header class="sticky top-0 z-50"></app-header>
     <div class="main-wrapper">
         <router-outlet></router-outlet>
     </div>
