Solve compiler issues

--- a/src/app/modules/result/components/result-tag/result-tag.component.html
+++ b/src/app/modules/result/components/result-tag/result-tag.component.html
@@ -1,29 +1,16 @@
-<!-- <div class="container">
-    <label class="block text-gray-600 text-sm font-semibold mb-1" [attr.for]="tag.key">{{tag.label}}</label>
+<div class="container">
+    <label class="block text-gray-600 text-sm font-semibold mb-1" [attr.for]="tag.key">{{tag.key}}</label>
 
     <ng-container [ngSwitch]="tag.type">
 
-        <input *ngSwitchCase="'stringbox'" [id]="tag.key" type="text" pInputText [formControlName]="tag.key" />
-        <p-inputNumber *ngSwitchCase="'intbox'" [inputId]="tag.key" [formControlName]="tag.key"></p-inputNumber>
-        <p-checkbox *ngSwitchCase="'boolbox'" [formControlName]="tag.key" [value]="tag.label"
-            [inputId]="tag.key"></p-checkbox>
-        <p-inputNumber *ngSwitchCase="'floatbox'" mode="decimal" [inputId]="tag.key"
-            [formControlName]="tag.key"></p-inputNumber>
+        <input *ngSwitchCase="'stringbox'" [id]="tag.key" type="text" pInputText [disabled]="true" [value]="tag.value" />
+        <p-checkbox *ngSwitchCase="'boolbox'" [value]="tag.value"  [binary]="true" [id]="tag.key" [disabled]="true"></p-checkbox>
+        <p-inputNumber *ngSwitchCase="'floatbox'" mode="decimal" [id]="tag.key" [useGrouping]="false" [disabled]="true"> </p-inputNumber>
+        <p-inputNumber *ngSwitchCase="'intbox'" [id]="tag.key" [useGrouping]="false" [disabled]="true"> </p-inputNumber>
 
-        <ng-container *ngSwitchCase="'visualizer'">
-            <p-fileUpload #fileUpload mode="basic" [chooseLabel]="'Selecciona'"
-                accept="image/*,application/dicom"
-                [name]="tag.key"
-                (onSelect)="selectFile($event, fileUpload)"></p-fileUpload>
-            <b *ngIf="this.tag.value">{{this.tag.value.name}}</b>
-            <app-vtk-visualizer [file]="tag.value"></app-vtk-visualizer>
-            
-        </ng-container>
+        <app-vtk-visualizer [file]="tag.value"></app-vtk-visualizer>
 
-
-        <p-message *ngSwitchDefault severity="error" text="Unsupported TAG"></p-message>
     </ng-container>
-    <p-message *ngIf="!isValid && !isPristine" severity="error" text="Error"></p-message>
 
 
-</div> -->
+</div>
