--- a/src/app/modules/result/components/result-view/result-view.component.html
+++ b/src/app/modules/result/components/result-view/result-view.component.html
@@ -1,3 +1,5 @@
 <div>
-    
+    <div *ngFor="let tag of tags" class="form-row">
+        <app-result-tag [tag]="tag" [tag]="tag"></app-result-tag>
+    </div>
 </div>
