--- a/src/app/modules/visualizer/components/vtk-visualizer/vtk-visualizer.component.scss
+++ b/src/app/modules/visualizer/components/vtk-visualizer/vtk-visualizer.component.scss
@@ -1,5 +1,3 @@
-.visualizer{
-    @apply bg-slate-300 shadow-md rounded p-7 lg:w-[70vw] w-[90vw]
-        lg:pb-[56.25%] pb-[85.25%] 
-    ;
+.visualizer {
+    @apply bg-slate-300 shadow-md rounded p-7 max-w-fit w-[90vw] lg:w-[70vw];
 }
