--- a/src/app/modules/form-builder/components/algorithm-form-tag/algorithm-form-tag.component.html
+++ b/src/app/modules/form-builder/components/algorithm-form-tag/algorithm-form-tag.component.html
@@ -11,8 +11,8 @@
             [formControlName]="tag.key"></p-inputNumber>
 
         <ng-container *ngSwitchCase="'visualizer'">
-            <p-fileUpload #fileUpload mode="basic" [chooseLabel]="'Selecciona'"
-                accept="image/*,application/dicom"
+            <p-fileUpload [disabled]="this.form.disabled" #fileUpload mode="basic" [chooseLabel]="'Selecciona'"
+                [accept]="this.ACCEPTED_TYPES.join(',')"
                 [name]="tag.key"
                 (onSelect)="selectFile($event, fileUpload)"></p-fileUpload>
             <b *ngIf="this.tag.value">{{this.tag.value.name}}</b>
@@ -23,7 +23,7 @@
 
         <p-message *ngSwitchDefault severity="error" text="Unsupported TAG"></p-message>
     </ng-container>
-    <p-message *ngIf="!isValid && !isPristine" severity="error" text="Error"></p-message>
+    <p-message *ngIf="!isValid && !isPristine && this.form.enabled" severity="error" text="Error"></p-message>
 
 
 </div>
