--- a/src/app/modules/result/components/result-tag/result-tag.component.html
+++ b/src/app/modules/result/components/result-tag/result-tag.component.html
@@ -12,17 +12,17 @@
             <app-vtk-visualizer [file]="tag.value"></app-vtk-visualizer>
         </ng-container>
 
-        <p-table *ngSwitch="'json'" [value]="tag.value" [tableStyle]="{ 'min-width': '50rem' }">
+        <p-table *ngSwitchCase="'json'" [value]="tag.value" [tableStyle]="{ 'min-width': '50rem' }">
             <ng-template pTemplate="header">
                 <tr>
                     <th>Clave</th>
                     <th>Valor</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-json>
+            <ng-template pTemplate="body" let-item>
                 <tr>
-                    <td>{{ json }}</td>
-                    <td>{{ tag.value[json] }}</td>
+                    <td>{{ item.key }}</td>
+                    <td>{{ item.value }}</td>
                 </tr>
             </ng-template>
         </p-table>
