added styles in components

--- a/src/app/modules/home/components/algorithm/algorithm.component.html
+++ b/src/app/modules/home/components/algorithm/algorithm.component.html
@@ -6,10 +6,10 @@
                 <span>Servicio</span>
             </ng-template>
             <form name="microPick" #microPick="ngForm" (ngSubmit)="getServiceInfo()">
-                <label class="block text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona un Servicio</label>
+                <label class="text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona un Servicio</label>
         
                 <div class="cell">
-                    <p-dropdown [placeholder]="'Selecciona'" [required]="true" name="algorithm" [options]="services"
+                    <p-dropdown  [placeholder]="'Selecciona'" [required]="true" name="algorithm" [options]="services"
                         [(ngModel)]="selectedService" [style]="{ width: '100%' }"></p-dropdown>
                     <p-button [loading]="loadingS" icon="pi pi-refresh" (onClick)="this.getServices()"></p-button>
                 </div>
@@ -26,7 +26,7 @@
                 <span>Algoritmo</span>
             </ng-template>
             <form *ngIf="this.algorithms.length !== 0" name="algoPick" #algoPick="ngForm" (ngSubmit)="buildForm()">
-                <label class="block text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona un algoritmo</label>
+                <label class="text-gray-600 text-sm font-semibold mb-1" for="algorithm">Selecciona un algoritmo</label>
         
                 <p-dropdown [placeholder]="'Selecciona'" [required]="true" name="algorithm" [options]="algorithms" optionLabel="name"
                         [(ngModel)]="selectedAlgorithm" [style]="{ width: '100%' }"></p-dropdown>
