--- a/src/app/modules/home/components/header/header.component.html
+++ b/src/app/modules/home/components/header/header.component.html
@@ -15,7 +15,7 @@
         </svg>
       </button>
     </div>
-    <div #navbar_sticky class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1">
+    <div #navbar_sticky class="items-center mr-20 justify-between hidden w-full md:flex md:w-auto md:order-1 ml-auto">
       <ul class="nav-list">
         <li>
           <a [routerLink]="'/home'" routerLinkActive="nav-item-selected" class="nav-item"
