Add regresh token functionality and add logout

--- a/src/app/modules/home/components/header/header.component.html
+++ b/src/app/modules/home/components/header/header.component.html
@@ -34,7 +34,7 @@
             ariaCurrentWhenActive="page">Ayuda</a>
         </li>
         <li>
-          <p-button  (onClick)="this.logout()" label="Danger" severity="danger" [outlined]="true" [size]="small"></p-button>
+          <p-button (onClick)="this.logout()" label="Cerrar sesión" styleClass="p-button-outlined p-button-danger p-button-sm"></p-button>
         </li>
       </ul>
     </div>
