--- a/src/app/modules/home/components/algorithm/algorithm.component.scss
+++ b/src/app/modules/home/components/algorithm/algorithm.component.scss
@@ -13,20 +13,13 @@ form{
 }
 
 .cell{
-    @apply flex flex-row gap-1 w-full md:w-[65%]
+    @apply flex flex-row gap-1 flex-wrap w-full 
 }
 
-.panel-container{
-    @apply flex flex-col;
-}
 
 :host ::ng-deep .p-tabview{
-    @apply md:flex flex-col items-center;
+    @apply md:flex flex-col items-center w-full;
     .p-tabview-nav{
         @apply gap-12;
     }
 }
-
-
-
-
