--- a/src/app/modules/home/components/help/help.component.html
+++ b/src/app/modules/home/components/help/help.component.html
@@ -1,1 +1,34 @@
-<p-steps [model]="items" [readonly]="false" [activeIndex]="activeIndex" ></p-steps>
+<div class="flex flex-col gap-8">
+    <p-fieldset [toggleable]="true" [collapsed]="true">
+        <ng-template pTemplate="header">
+            <div class="flex items-center text-primary justify-center">
+                <span class="pi pi-server mr-2"></span>
+                <span class="font-bold text-lg">Escoger un servicio</span>
+            </div>
+        </ng-template>
+    
+        <p></p>
+    </p-fieldset>
+    
+    <p-fieldset [toggleable]="true" [collapsed]="true">
+        <ng-template pTemplate="header">
+            <div class="flex items-center text-primary justify-center">
+                <span class="pi pi-box mr-2"></span>
+                <span class="font-bold text-lg">Escoger un algoritmo</span>
+            </div>
+        </ng-template>
+    
+        <p></p>
+    </p-fieldset>
+
+    <p-fieldset [toggleable]="true" [collapsed]="true">
+        <ng-template pTemplate="header">
+            <div class="flex items-center text-primary justify-center">
+                <span class="pi pi-sliders-h mr-2"></span>
+                <span class="font-bold text-lg">Llenar el formulario</span>
+            </div>
+        </ng-template>
+        
+        <p></p>
+    </p-fieldset>
+</div>
