add file extentions for file uploader

--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -17,8 +17,8 @@
     <br>
     <ul class="emoji-list leading-[2.4]">
         <li>Santiago Zúñiga Martínez: <a class="font-bold text-blue-600 underline">s.zunigam@javeriana.edu.co</a></li>
-        <li>Juan Esteban Urquijo Huérfano: <a class="font-bold text-blue-600 underline">jurquijo@javeriana.edu.co</a></li>
-        <li>Txsus: <a class="font-bold text-blue-600 underline">txus@javeriana.edu.co</a></li>
+        <li>Juan Esteban Urquijo Huérfano: <a class="font-bold text-blue-600 underline">juan-urquijoh@javeriana.edu.co</a></li>
+        <li>Jesús David Traslaviña: <a class="font-bold text-blue-600 underline">jetraslavina@javeriana.edu.co</a></li>
         <li>Juan Andrés Dorado: <a class="font-bold text-blue-600 underline">dorado@javeriana.edu.co</a></li>
     </ul>
     <br>
