--- a/src/app/modules/form-builder/components/algorithm-form-tag/algorithm-form-tag.component.html
+++ b/src/app/modules/form-builder/components/algorithm-form-tag/algorithm-form-tag.component.html
@@ -11,7 +11,7 @@
 
         <ng-container *ngSwitchCase="'visualizer'">
             <p-fileUpload [disabled]="this.form.disabled" #fileUpload mode="basic" [chooseLabel]="'Selecciona'"
-                [accept]="this.ACCEPTED_TYPES.join(',')"
+                [accept]="this.ACCEPTED_TYPES_MIME.concat(this.ACCEPTED_TYPES_EXT).join(',')"
                 [name]="tag.key"
                 (onSelect)="selectFile($event, fileUpload)"></p-fileUpload>
             <b *ngIf="this.tag.value">{{this.tag.value.name}}</b>
