--- a/src/app/modules/user/components/general/general-user.component.html
+++ b/src/app/modules/user/components/general/general-user.component.html
@@ -1,4 +1,4 @@
-<p-tabView styleClass="tabview-custom">
+<p-tabView>
     <p-tabPanel>
         <ng-template pTemplate="header">
             <i class="pi pi-save"></i>
