--- a/src/app/modules/visualizer/components/tags/tags.component.html
+++ b/src/app/modules/visualizer/components/tags/tags.component.html
@@ -1,11 +1,10 @@
-<p-table #dt [value]="tagsData" [rowHover]="true" [rows]="10"
+<p-table styleClass="w-full" #dt [value]="tagsData" [rowHover]="true" [rows]="10"
     [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 20, 50,100]" [loading]="loading" [paginator]="true"
     [currentPageReportTemplate]="'Showing {first} to {last} of {totalRecords} entries'" [filterDelay]="0"
     [globalFilterFields]="['key', 'value']">
     <ng-template pTemplate="caption">
         <div class="table-header">
             <span class="p-input-icon-left">
-                <i class="pi pi-search"></i>
                 <input pInputText type="text" (input)="dt.filterGlobal(getEventValue($event), 'contains')"
                     placeholder="Global Search" />
             </span>
