--- a/src/app/modules/form-builder/components/algorithm-form/algorithm-form.component.html
+++ b/src/app/modules/form-builder/components/algorithm-form/algorithm-form.component.html
@@ -2,5 +2,5 @@
     <div *ngFor="let tag of tags" class="form-row">
         <app-algorithm-form-tag [tag]="tag" [form]="form"></app-algorithm-form-tag>
     </div>
-    <p-button type="submit" [loading]="loading" label="Enviar" severity="success" [disabled]="!form.valid"></p-button>
+    <p-button type="submit" [loading]="loading" label="Ejecutar algoritmo" severity="success" [disabled]="!form.valid"></p-button>
 </form>
