--- a/src/app/modules/home/components/footer/footer.component.html
+++ b/src/app/modules/home/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     </span>
     <ul class="nav-list">
         <li>
-            <a href="https://github.com/GraduationProject-PediSoft" class="nav-item">Github</a>
+            <a href="https://github.com/Project-PediSoft" class="nav-item">Github</a>
         </li>
     </ul>
     </div>
