--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -10,7 +10,7 @@
         inteligencia artificial. Si bien la naturaleza, el diseño y la arquitectura de esta aplicación está
         pensada para cualquier tipo de algoritmo en cualquier contexto, el motivo y el sentido de la misma
         deriva de una necesidad de los médicos pediátricos: la toma de decisiones
-        de radigrafías pediátricas. <br>
+        de radiografías pediátricas. <br>
         Nos motiva el hecho de que de ser posible, el uso de esta aplicación puede llegar a salvar vidas de
         una manera o ayudar a mejorar la calidad de vida de los pacientes pediátricos asistiendo a los
         profesionales de la salud. Desarrollado por: </p>
@@ -19,7 +19,7 @@
         <li>Santiago Zúñiga Martínez: <a class="font-bold text-blue-600 underline">s.zunigam@javeriana.edu.co</a></li>
         <li>Juan Esteban Urquijo Huérfano: <a class="font-bold text-blue-600 underline">juan-urquijoh@javeriana.edu.co</a></li>
         <li>Jesús David Traslaviña: <a class="font-bold text-blue-600 underline">jetraslavina@javeriana.edu.co</a></li>
-        <li>Juan Andrés Dorado: <a class="font-bold text-blue-600 underline">dorado@javeriana.edu.co</a></li>
+        <li>Andrés Felipe Dorado: <a class="font-bold text-blue-600 underline">dorado@javeriana.edu.co</a></li>
     </ul>
     <br>
     <p>
